# auto-semver

./: .Dockerfile_SemVer  .bumpversion.cfg  .gitignore  Dockerfile  Jenkinsfile  README.md  README.rst  README.txt  VERSION  get_version.py  github-actions.Dockerfile  pyproject.toml  requirements.txt  semver.py  setup.cfg  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_bug_report.md  2_feature_request.md  3_question.md  4_guidance.md
.github/workflows/: auto-semver-actions.yml  unittests.yaml
semver/: __init__.py  bump.py  exceptions.py  get_version.py  logger.py  semver.py  tests.py  utils.py  version_type.py
semver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
semver/scm/: __init__.py  git.py  mock.py  perforce.py
semver/scm/tests/: test_git.py  test_mock.py  test_scm.py
semver/tests/: test_semver.py  test_utils.py
vars/: getVersion.groovy  gitPushTags.groovy  runAutoSemver.groovy
