[metadata]
name = semver
author = RightBrain Networks
author_email = cloud@rightbrainnetworks.com
description = Automatic Semantic Versioner
long_description = file: README.md, license.txt
url = https://github.com/RightBrain-Networks/auto-semver

license = Apache2.0
keywords = Semantic, Version, Git, Auto-Versioning
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: Apache Software License
        
        # Development Status
        Development Status :: 3 - Alpha
        
        # Audience
        Intended Audience :: Developers
        Intended Audience :: System Administrators
        Topic :: Software Development :: Build Tools


[options]
include_package_data = True
packages = find:
python_requires = >=3.7, <4

[options.packages.find]
exclude =
    contrib*
    docs*
    tests*


[options.entry_points]
console_scripts =
    semver = semver:main
    semver_get_version = semver.get_version:main